publish: bold installation warning
generated from commit 1e747d73cc5ef0ce11b366abe8378dfe5c7d77bf

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 <span class="c"># inspect before running</span>
 ./bin/setup
 </code></pre>
-<p><code class="prettyprint">bin/setup</code> installs all the dependencies the same way as our servers and <a href="https://circleci.com/gh/kengz/openai_lab">CircleCI builds</a>; inspect or change it as needed before running to ensure it doesn&rsquo;t make unwanted changes to your system. Also make sure your dependencies are the most updated - check the <a href="#dependencies">major required versions here</a>.</p>
+<p><code class="prettyprint">bin/setup</code> installs all the dependencies the same way as our servers and <a href="https://circleci.com/gh/kengz/openai_lab">CircleCI builds</a>; <strong>inspect or change it as needed before running to ensure it doesn&rsquo;t make unwanted changes to your system.</strong> Also make sure your dependencies are the most updated - check the <a href="#dependencies">major required versions here</a>.</p>
 
 <aside class="notice">
 If you use OpenAI Lab for serious experimentations, fork this repo then clone your fork, so you can commit code and contribute to the Lab.
