publish: bold text
generated from commit 866838efdb05b9e5f79bed45cd069e8a0bcd707b

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 <p>With OpenAI Lab, we could focus on researching the essential elements of reinforcement learning such as the algorithm, policy, memory, and parameter tuning. It allows us to build agents efficiently using existing components with the implementations from research ideas. We could then test the research hypotheses systematically by running experiments.</p>
 
-<p>See the <a href="#solutions">Solutions</a> to some OpenAI environments that the Lab users have produced.</p>
+<p><strong>See the <a href="#solutions">Solutions</a> to some OpenAI environments that the Lab users have produced.</strong></p>
 
 <p><em>Ultimately, the Lab is a generalized framework for doing reinforcement learning, agnostic of OpenAI Gym and Keras. Pytorch-based implementations are on the roadmap, for example.</em></p>
 
