--- a/index.html
+++ b/index.html
@@ -1271,16 +1271,16 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left">MountainCarContinuous-v0</td>
-<td style="text-align: left"><em>n/a</em></td>
-<td style="text-align: left"><em>n/a</em></td>
-<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left">Pendulum-v0</td>
-<td style="text-align: left"><em>n/a</em></td>
-<td style="text-align: left"><em>n/a</em></td>
-<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
 </tbody></table>
@@ -1305,9 +1305,9 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left">LunarLanderContinuous-v2</td>
-<td style="text-align: left"><em>n/a</em></td>
-<td style="text-align: left"><em>n/a</em></td>
-<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
