publish: update fitness matrix description
generated from commit ceedb982bc8cce148ad8c2bcca7f7fdb09536c0f

--- a/index.html
+++ b/index.html
@@ -1138,9 +1138,9 @@ When developing a new algorithm, use the session graph to immediately see how th
 
 <h2 id="agents-fitness-matrix"><a name="agents-matrix"></a>Agents Fitness Matrix</h2>
 
-<p>The overall status of the Agents in OpenAI Lab. Feel free to invent new ones! For more detail on currently implemented Agents, see <a href="#agents">Agents</a></p>
+<p>A projection of the Fitness Matrix along the Agents axis. This shows overall status of the Agents in OpenAI Lab. Feel free to invent new ones! For more detail on currently implemented Agents, see <a href="#agents">Agents</a></p>
 
-<p><em>Pending: we still need a way to cross-evaluate Agents. Refer to the NEC paper. Perhaps use Normalized human scores per episode vs Millions of Frames.</em></p>
+<p><em>Pending: we have a generic formalization to cross-evaluate Agents using heatmap statistics; see <a href="#metrics">Metrics</a>. This is on the roadmap.</em></p>
 
 <table><thead>
 <tr>
@@ -1228,7 +1228,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 
 <h2 id="environments-fitness-matrix"><a name="environments-matrix"></a>Environments Fitness Matrix</h2>
 
-<p>The list of accepted solutions can be seen in the <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed">solution PRs</a></p>
+<p>A projection of the Fitness Matrix along the Problems axis. This shows the best solutions for the problems. The list of accepted solutions can be seen in the <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed">solution PRs</a></p>
 
 <h3 id="classic-environments">Classic Environments</h3>
 
