--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 
 <h2 id="environments-fitness-matrix"><a name="environments-matrix"></a>Environments Fitness Matrix</h2>
 
-<p>A projection of the Fitness Matrix along the Problems axis. This shows the best solutions for the problems. The list of accepted solutions can be seen in the <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed">solution PRs</a></p>
+<p>A projection of the Fitness Matrix along the Environments axis. This shows the best solutions for the problems. The list of accepted solutions can be seen in the <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed">solution PRs</a></p>
 
 <h3 id="classic-environments">Classic Environments</h3>
 
