--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left"><strong>CartPole-v1</strong></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/80">13.22935</a></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/82">16.06697</a></td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/107">18.91624</a></td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
@@ -1228,7 +1228,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 
 <h2 id="environments-fitness-matrix"><a name="environments-matrix"></a>Environments Fitness Matrix</h2>
 
-<p>A projection of the Fitness Matrix along the Environments axis. This shows the best solutions for the problems. The list of accepted solutions can be seen in the <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed">solution PRs</a></p>
+<p>A projection of the Fitness Matrix along the Environments axis. This shows the best solutions for the environments. The list of accepted solutions can be seen in the <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed">solution PRs</a></p>
 
 <h3 id="classic-environments">Classic Environments</h3>
 
@@ -1250,10 +1250,10 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left">CartPole-v1</td>
-<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/82">16.06697</a></td>
-<td style="text-align: left">16</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/107">18.91624</a></td>
+<td style="text-align: left">19</td>
 <td style="text-align: left">kengz/lgraesser</td>
-<td style="text-align: left">double_dqn_v1</td>
+<td style="text-align: left">offpol_sarsa_v1</td>
 </tr>
 <tr>
 <td style="text-align: left">Acrobot-v1</td>
