--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ We recommend Tensorflow over Theano for stability. By default <code>bin/setup</c
 <p>Check the <a href="https://github.com/kengz/openai_lab/releases">release version here</a>.</p>
 
 <ul>
-<li>If you cloned dierctly the Lab, update with <code class="prettyprint">git pull</code></li>
+<li>If you cloned directly the Lab, update with <code class="prettyprint">git pull</code></li>
 <li>If you forked, <a href="https://help.github.com/articles/configuring-a-remote-for-a-fork/">setup a remote</a> and <a href="https://help.github.com/articles/syncing-a-fork/">update fork</a>.</li>
 </ul>
 
