--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ We recommend Tensorflow over Theano for stability. By default <code>bin/setup</c
 </span></code></pre>
 <h3 id="updating-lab">Updating Lab</h3>
 
-<p>Check the <a href="https://github.com/kengz/openai_lab/releases">release version here</a>.</p>
+<p>Check the <a href="https://github.com/kengz/openai_lab/releases">release versions here</a>.</p>
 
 <ul>
 <li>If you cloned directly the Lab, update with <code class="prettyprint">git pull</code></li>
