--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <li><p><code class="prettyprint">epi_stats_min</code>: the min of the termination episode of a session, i.e. the fastest solved session of a trial. The lower the better, as it would imply that the agent can solve the environment faster.</p></li>
 </ol>
 
-<p><a name="hue"></a>### The hue metrics</p>
+<h3 id="the-hue-metrics"><a name="hue"></a>The hue metrics</h3>
 
 <p>Each data point represents a trial, with the data averaged over its sessions. The points are colored (see legend) with the hue:</p>
 
