publish: add link to a shorter blog post for new comers
generated from commit d345e18d779d038b1782586ea91be316d8ac5fa1

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
 <p><em>An experimentation system for Reinforcement Learning using OpenAI Gym, Tensorflow, and Keras.</em></p>
 
-<p>The <em>OpenAI Lab</em> is created to do Reinforcement Learning (RL) like science - <em>theorize, experiment</em>. It provides an easy to use interface to <a href="https://gym.openai.com/">OpenAI Gym</a> and <a href="https://keras.io/">Keras</a>, combined with an automated experiment and evaluation framework.</p>
+<p><em>OpenAI Lab</em> is created to do Reinforcement Learning (RL) like science - <em>theorize, experiment</em>. It provides an easy to use interface to <a href="https://gym.openai.com/">OpenAI Gym</a> and <a href="https://keras.io/">Keras</a>, combined with an automated experiment and evaluation framework.</p>
 
 <p>This is <a href="#motivations">motivated by the problems we experienced in RL research</a>: the difficulty of building upon other&rsquo;s work, the lack of rigor in comparisons of research results, and the inertia to high level vision.</p>
 
@@ -1013,7 +1013,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 
 <h2 id="submission-instructions">Submission instructions</h2>
 
-<p>If you invent a new algorithm/combination that beats the best solutions, please submit a <a href="https://github.com/kengz/openai_lab/pulls">Pull Request</a> to the OpenAI Lab. Refer to the <a href="https://github.com/kengz/openai_lab/blob/master/.github/PULL_REQUEST_TEMPLATE.md">PR template</a> for the submission guideline. See examples from the accepted <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed">solution PRs</a>.</p>
+<p>If you invent a new algorithm/combination that beats the best solutions, please submit a <a href="https://github.com/kengz/openai_lab/pulls">Pull Request</a> to OpenAI Lab. Refer to the <a href="https://github.com/kengz/openai_lab/blob/master/.github/PULL_REQUEST_TEMPLATE.md">PR template</a> for the submission guideline. See examples from the accepted <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed">solution PRs</a>.</p>
 
 <p>To learn how to analyze experiment data, refer to <a href="#analysis">Analysis</a>.</p>
 
@@ -1783,6 +1783,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <h2 id="rl-theory-resources">RL Theory Resources</h2>
 
 <ul>
+<li><a href="https://www.nervanasys.com/demystifying-deep-reinforcement-learning/">Demystifying Deep Reinforcement Learning</a>: an introductory blog post about deep reinforcement learning; a good and short first intro for new comers.</li>
 <li><a href="https://www.youtube.com/watch?v=PtAIh9KSnjo">Deep Reinforcement Learning</a>: 90 minute video overview by John Schulman. Assumes some knowledge of neural networks. If you are not familiar with neural networks, then start with Sutton and Barto’s book or David Silver&rsquo;s course</li>
 <li><a href="http://people.inf.elte.hu/lorincz/Files/RL_2006/SuttonBook.pdf">Reinforcement Learning: An Introduction</a>: Classic textbook by Sutton and Barto. A good place to go next after watching John Schulman’s talk. Link is to the in progress 2nd edition. </li>
 <li><a href="http://www0.cs.ucl.ac.uk/staff/d.silver/web/Teaching.html">David Silver’s Reinforcement Learning Course</a></li>
@@ -2275,7 +2276,7 @@ As the Lab grows, we will add more development guide as needed.
 
 <h2 id="authors">Authors</h2>
 
-<p><em>Note: we are not affiliated with OpenAI; the OpenAI Lab is not tied to any organizations.</em></p>
+<p><em>Note: we are not affiliated with OpenAI; OpenAI Lab is not tied to any organizations.</em></p>
 
 <ul>
 <li>Wah Loon Keng. <a href="https://twitter.com/kengzwl">twitter: @kengzwl</a></li>
