publish: correct broken link
generated from commit fcecfe1e74adf0c02a3e14af8561af5bb1a937f2

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 <h3 id="run-the-lab">Run the Lab</h3>
 
-<p>Next, see <a href="#installation">Installation</a> and jump to <a href="quickstart">Quickstart</a>.</p>
+<p>Next, see <a href="#installation">Installation</a> and jump to <a href="#quickstart">Quickstart</a>.</p>
 
 <div style="max-width: 100%"><img alt="Timelapse of OpenAI Lab" src="./images/lab_demo_dqn.gif" /></div>
 
