--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <tr>
 <td style="text-align: left"><strong>MountainCar-v0</strong></td>
 <td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/117">-0.03744196</a></td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
@@ -1329,10 +1329,10 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left">MountainCar-v0</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/117">-0.03744196</a></td>
+<td style="text-align: left">970</td>
+<td style="text-align: left">kengz/lgraesser</td>
+<td style="text-align: left">mountain_double_dqn</td>
 </tr>
 <tr>
 <td style="text-align: left">MountainCarContinuous-v0</td>
