publish: name properly to offpol sarsa
generated from commit 707a3ebc25593b09c42ef306fde9586fc8de0dee

--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <th style="text-align: left"></th>
 <th style="text-align: left">DQN</th>
 <th style="text-align: left">double-DQN</th>
-<th style="text-align: left">SARSA</th>
+<th style="text-align: left">OffPolicySARSA</th>
 <th style="text-align: left">double-DQN-PER</th>
 <th style="text-align: left">DDPG</th>
 </tr>
