publish: add link to contributors
generated from commit 53d351dad808e9126d244e42d9a19d83037d34be

--- a/index.html
+++ b/index.html
@@ -2274,6 +2274,10 @@ As the Lab grows, we will add more development guide as needed.
 <li>Wanna just talk? Hit us up on Twitter below.</li>
 </ul>
 
+<h3 id="lab-contributors">Lab Contributors</h3>
+
+<p>See the <a href="https://github.com/kengz/openai_lab/graphs/contributors">full list of contributors here</a>.</p>
+
 <h2 id="authors">Authors</h2>
 
 <p><em>Note: we are not affiliated with OpenAI; OpenAI Lab is not tied to any organizations.</em></p>
