publish: add component_locks to dev
generated from commit 70400cbd578abf21bff02ade5c89e56d50535404

--- a/index.html
+++ b/index.html
@@ -2205,6 +2205,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <li><code class="prettyprint">rl/policy/</code>: RL agent policy classes</li>
 <li><code class="prettyprint">rl/preprocessor/</code>: RL agent preprocessor (state and memory) classes</li>
 <li><code class="prettyprint">rl/spec/</code>: specify new problems and experiment_specs to run experiments for</li>
+<li><code class="prettyprint">rl/spec/component_locks.json</code>: locks to check RL component combination in specs</li>
 <li><code class="prettyprint">rl/analytics.py</code>: the data analytics module for output experiment data</li>
 <li><code class="prettyprint">rl/experiment.py</code>: the main high level experiment logic</li>
 <li><code class="prettyprint">rl/util.py</code>: Generic util</li>
