--- a/index.html
+++ b/index.html
@@ -1025,9 +1025,12 @@ When developing a new algorithm, use the session graph to immediately see how th
 <tr>
 <th style="text-align: left"></th>
 <th style="text-align: left">DQN</th>
-<th style="text-align: left">double-DQN</th>
-<th style="text-align: left">OffPolicySARSA</th>
-<th style="text-align: left">double-DQN-PER</th>
+<th style="text-align: left">DoubleDQN</th>
+<th style="text-align: left">Sarsa</th>
+<th style="text-align: left">OffPolicySarsa</th>
+<th style="text-align: left">DoubleDQN-PER</th>
+<th style="text-align: left">ActorCritic</th>
+<th style="text-align: left">DPG</th>
 <th style="text-align: left">DDPG</th>
 </tr>
 </thead><tbody>
@@ -1035,7 +1038,10 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left"><strong>CartPole-v0</strong></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/73">9.635032</a></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/78">10.34826</a></td>
+<td style="text-align: left">-</td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/91">12.98525</a></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
@@ -1043,7 +1049,10 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left"><strong>CartPole-v1</strong></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/80">13.22935</a></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/82">16.06697</a></td>
+<td style="text-align: left">-</td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/107">18.91624</a></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
@@ -1051,7 +1060,10 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left"><strong>Acrobot-v1</strong></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/94">-0.1051617</a></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/98">-0.1045992</a></td>
+<td style="text-align: left">-</td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/97">-0.1127294</a></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
@@ -1062,6 +1074,9 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>MountainCarContinuous-v0</strong></td>
@@ -1069,6 +1084,9 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
@@ -1077,13 +1095,19 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>LunarLander-v2</strong></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/84">2.786624</a></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/87">2.992104</a></td>
+<td style="text-align: left">-</td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/96">3.313421</a></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
@@ -1093,10 +1117,16 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>BipedalWalker-v2</strong></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
@@ -1110,9 +1140,15 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>CarRacing-v0</strong></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
@@ -1126,9 +1162,15 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>Alien-v0</strong></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
@@ -1142,9 +1184,15 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>Breakout-v0</strong></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
@@ -1158,9 +1206,15 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>Pong-v0</strong></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
@@ -1174,9 +1228,15 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>SpaceInvader-v0</strong></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
@@ -1190,9 +1250,15 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>Snake-v0</strong></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
@@ -1203,7 +1269,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 
 <h2 id="agents-fitness-matrix"><a name="agents-matrix"></a>Agents Fitness Matrix</h2>
 
-<p>A projection of the Fitness Matrix along the Agents axis. This shows overall status of the Agents in OpenAI Lab. Feel free to invent new ones! For more detail on currently implemented Agents, see <a href="#agents">Agents</a></p>
+<p>A projection of the Fitness Matrix along the Agents axis. This shows overall status of the Agents in OpenAI Lab. Feel free to invent new ones! For more details, see <a href="#algorithms">Algorithms</a> and <a href="#families">Families of RL Algorithms</a>.</p>
 
 <p><em>Pending: we have a generic formalization to cross-evaluate Agents using heatmap statistics; see <a href="#metrics">Metrics</a>. This is on the roadmap.</em></p>
 
@@ -1220,17 +1286,22 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left">-</td>
 </tr>
 <tr>
-<td style="text-align: left"><a href="https://arxiv.org/abs/1509.06461">double-DQN</a></td>
+<td style="text-align: left"><a href="https://arxiv.org/abs/1509.06461">DoubleDQN</a></td>
 <td style="text-align: left">✓</td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
-<td style="text-align: left"><a href="https://arxiv.org/abs/1511.06581">dueling-DQN</a></td>
+<td style="text-align: left"><a href="https://arxiv.org/abs/1511.06581">DuelingDQN</a></td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
-<td style="text-align: left">SARSA</td>
+<td style="text-align: left">Sarsa</td>
+<td style="text-align: left">✓</td>
+<td style="text-align: left">-</td>
+</tr>
+<tr>
+<td style="text-align: left">OffPolicySarsa</td>
 <td style="text-align: left">✓</td>
 <td style="text-align: left">-</td>
 </tr>
@@ -1251,12 +1322,17 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left"><a href="https://en.wikipedia.org/wiki/Cross-entropy_method">CEM (Cross Entropy Method)</a></td>
-<td style="text-align: left">next</td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+</tr>
+<tr>
+<td style="text-align: left">ActorCritic</td>
+<td style="text-align: left">✓</td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left"><a href="https://webdocs.cs.ualberta.ca/~sutton/papers/SMSM-NIPS99.pdf">PG (Policy Gradient)</a></td>
-<td style="text-align: left">next</td>
+<td style="text-align: left">in-progress</td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
@@ -1275,13 +1351,18 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left">-</td>
 </tr>
 <tr>
+<td style="text-align: left">Dyna</td>
+<td style="text-align: left">next</td>
+<td style="text-align: left">-</td>
+</tr>
+<tr>
 <td style="text-align: left"><a href="https://arxiv.org/abs/1502.05477">TRPO</a></td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left"><a href="https://arxiv.org/abs/1703.01988">Neural Episodic Control (NEC)</a></td>
-<td style="text-align: left">next</td>
+<td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
@@ -1293,7 +1374,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 
 <h2 id="environments-fitness-matrix"><a name="environments-matrix"></a>Environments Fitness Matrix</h2>
 
-<p>A projection of the Fitness Matrix along the Environments axis. This shows the best solutions for the environments. The list of accepted solutions can be seen in the <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed">solution PRs</a></p>
+<p>A projection of the Fitness Matrix along the Environments axis. This shows the best solutions for the environments. The list of accepted solutions can be seen in the <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed">solution PRs</a>.</p>
 
 <h3 id="classic-environments">Classic Environments</h3>
 
@@ -1660,6 +1741,57 @@ When developing a new algorithm, use the session graph to immediately see how th
 <li>Q-vallue: Value of <code class="prettyprint">Q</code> function for a particular <code class="prettyprint">S</code> and <code class="prettyprint">A</code>.</li>
 <li>On policy: the same policy is used to act and evaluate the quality of actions.</li>
 <li>Off policy: a different policy is used to act and evaluate the quality of actions. </li>
+</ul>
+
+<h2 id="families-of-rl-algorithms"><a name="families"></a>Families of RL Algorithms</h2>
+
+<p>To navigate the different RL algorithms:</p>
+
+<ul>
+<li><p>Model-free</p>
+
+<ul>
+<li>Value-based
+
+<ul>
+<li><strong>DQN</strong></li>
+<li><strong>DoubleDQN</strong></li>
+<li><strong>Sarsa</strong></li>
+<li><strong>OffpolSarsa</strong></li>
+</ul></li>
+<li>Policy-based
+
+<ul>
+<li><strong>REINFORCE</strong></li>
+</ul></li>
+<li>ActorCritic
+
+<ul>
+<li><strong>ActorCritic</strong> (discrete)</li>
+<li><strong>ActorCritic</strong> (continuous)</li>
+<li><strong>DPG</strong> - typically this is an actorCritic implementation where there&rsquo;s a different policy for exploration and target</li>
+<li><strong>DDPG</strong> - very similar to DPG except with target networks and batch norm</li>
+</ul></li>
+</ul></li>
+<li><p>Model based</p>
+
+<ul>
+<li>Value based
+
+<ul>
+<li><strong>Dyna</strong></li>
+</ul></li>
+<li>Policy based
+
+<ul>
+<li><em>pending</em></li>
+</ul></li>
+<li>ActorCritic
+
+<ul>
+<li><em>pending</em></li>
+</ul></li>
+</ul></li>
 </ul>
 
 <h2 id="implemented-algorithms">Implemented Algorithms</h2>
